
syntax = "proto3";
import "repeatingMessageTypes.proto";

option java_package = "sep3.wayofmilk.grpc";
option java_multiple_files = true;
option csharp_namespace = "Sep3.WayOfMilk.Grpc";

// User roles here not yet implemented in the service logic
// but defined just in case they are needed in the future
// currently t3 is parsing them as strings and t2 should do the same
enum UserRole {
  ROLE_OWNER = 0;
  ROLE_WORKER = 1;
  ROLE_ADMIN = 2;
}

service UserService {
  rpc GetAllUsers (Empty) returns (UserList);
  rpc AddUser (UserCreationRequest) returns (UserData);
  rpc UpdateUser (UserData) returns (UserData);
  rpc GetUserById (SentId) returns (UserData);
  rpc DeleteUser (SentId) returns (Empty);
  rpc GetUsersByName (SentString) returns (UserList);
  rpc AuthenticateUser (AuthenticationRequest) returns (UserData);
  rpc ChangePassword (ChangePasswordRequest) returns (SentBool);
  rpc ResetPassword (SentId) returns (Empty);
}

message UserList {
  repeated UserData users = 1;
}
message UserCreationRequest {
  string name = 1;
  string email = 2;
  string phone = 3;
  string address = 4;
  string password = 5;
  string role = 6; // OWNER, WORKER etc.
  string licenseNumber = 7;
}
message UserData {
  int64 id = 1;
  optional string name = 2;
  optional string email = 3;
  optional string address = 4;
  optional string phone = 5;
  optional string role = 6; // OWNER, WORKER etc.
  optional string licenseNumber = 7;
}
message UserIdRequest {
  int64 id = 1;
}
message NameRequest {
  string name = 1;
}
message AuthenticationRequest {
  string email = 1;
  string password = 2;
}
message ChangePasswordRequest {
  int64 id = 1;
  string oldPassword = 2;
  string newPassword = 3;
}


/*
creation dto fields
    private String name;
    private String email;
    private String phone;
    private String address;
    private String password;
    private String role;
    private String licenseNumber;

userdata fields
  private String name;
  private String email;
  private String address;
  private String phone;
  private long id;
  private String role;
  private String licenseNumber;
 */